--- a/gb/23/10/23/n14101529.md
+++ b/gb/23/10/23/n14101529.md
@@ -1,46 +1,46 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：好色的马克思主义专家前腐后继</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/10/id14101533-c34da7885768af3cbed82b83e8aadddf-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2023年10月24日讯】10月21日晚，一则<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D%E4%B8%BB%E4%B9%89.md#1">马克思主义</a>学院院长骚扰女教师的贴子，在网上掀起轩然大波。</p>
-<p>发贴人称：“北京化工大学<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%A9%AC%E5%85%8B%E6%80%9D%E4%B8%BB%E4%B9%89.md#1">马克思主义</a>学院院长贾钢涛，你真是太TM无耻了！作为马院院长，你周末要求女教师陪酒参加饭局，我妻子碍于你是院长她又是新老师不敢拒绝只能去，身为党员干部，顶风作案，宴请官员，拉女教师陪酒，品行败坏，不配为领导干部，更不配当马院的院长。”</p>
+	<p>【大纪元2023年10月24日讯】10月21日晚，一则马克思主义学院院长骚扰女教师的贴子，在网上掀起轩然大波。</p>
+<p>发贴人称：“北京化工大学马克思主义学院院长贾钢涛，你真是太TM无耻了！作为马院院长，你周末要求女教师陪酒参加饭局，我妻子碍于你是院长她又是新老师不敢拒绝只能去，身为党员干部，顶风作案，宴请官员，拉女教师陪酒，品行败坏，不配为领导干部，更不配当马院的院长。”</p>
 <p>“更恶劣的是，三番四次半夜12点以谈工作的名义打电话骚扰我妻子，对我对我妻子还有我的家庭造成极其大的伤害，我的妻子已经重度抑郁，情绪崩溃，马院领导不关心我妻子的状况，还将我妻子移除了工作群。恳请各位同学帮帮你们的老师。”</p>
 <p>10月22日中午，北京化工大学回应称，已成立工作专班调查此事。</p>
 <p>此事曝光后，大陆网民骂声一片：“马院这种事情好多，真是讽刺。”“令人作呕的地方。”“马院是重灾区，应该裁撤掉这些道貌岸然的家伙。”“又是马院的臭鱼烂虾。”“烂透了，烂透了，烂透了······”</p>
 <p>北京化工大学的马克思主义学院官网显示，贾钢涛是该院院长、教授、博士生导师，主要从事马克思主义中国化、思想政治教育等领域的研究。</p>
 <p>贾钢涛还兼任中共国家社科基金（党史·党建）通讯评审专家，教育部人文社科项目评审专家，教育部学位与研究生教育评审专家，中国国际共产主义运动史学会常务理事，中国科学社会主义学会理事，陕西省陕甘宁革命根据地史研究会副会长。</p>
 <p>类似贾钢涛这样的马克思主义专家的丑闻还有许多。</p>
-<p>比如，4月23日晚上，一个叫“袁久红”的人，在有332个成员、名为“高校马院院长工作群”的微信群中，发了一张“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%89%B2%E6%83%85%E7%85%A7%E7%89%87.md#1">色情照片</a>”，也在网上炸了锅，引发各界“炮轰”。</p>
+<p>比如，4月23日晚上，一个叫“袁久红”的人，在有332个成员、名为“高校马院院长工作群”的微信群中，发了一张“色情照片”，也在网上炸了锅，引发各界“炮轰”。</p>
 <p>袁久红是东南大学马克思主义学院院长，教育部高校思政课教学指导委员会委员，中央马克思主义理论建设和研究工程《马克思主义基本原理概论》编写组专家，江苏省马克思主义研究会副会长，东南大学首席教授，博士生导师。</p>
 <p>2014年5月，袁久红被评为“2013年度全国高校思想政治理论课教师百名影响力人物”。</p>
 <p>2014年11月，袁久红被教育部社会科学司评为“全国高校思想政治理论课教学能手”。</p>
 <p>4月25日，微博大V“财东南”发贴说：“本人张琦，系中国共产党党员，我妻子戴女士于2016年7月入职东南大学马克思主义学院，入职短短一年半后于2018年1月申请离职，离职有很大一部分原因是被当时的院长袁久红穿了‘小鞋’，至于是什么样的‘小鞋’，无非就是男领导利用手中职权逼迫女下属就范。”</p>
 <p>东南大学已免去袁久红马克思主义院长职务。</p>
-<p>再比如，2021年12月3日，中共十八大召开不久，在中央编译局工作的山西师范学院女博士常艳，在网上发表长达12万字的文章《一朝忽觉京梦醒，半世浮沉雨打萍》，披露了她跟比她大20岁的时任中央编译局长衣俊卿17次<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%80%E6%88%BF.md#1">开房</a>的经历，吸引众多读者眼球。</p>
+<p>再比如，2021年12月3日，中共十八大召开不久，在中央编译局工作的山西师范学院女博士常艳，在网上发表长达12万字的文章《一朝忽觉京梦醒，半世浮沉雨打萍》，披露了她跟比她大20岁的时任中央编译局长衣俊卿17次开房的经历，吸引众多读者眼球。</p>
 <p>衣俊卿是长期从事马克思主义研究的教授、博士生导师；当过黑龙江大学校长，黑龙江省委常委、省委宣传部长；2010年2月起，任中央编译局局长。</p>
 <p>中央编译局的全称是中共中央马克思、恩格斯、列宁、斯大林著作编译局。</p>
 <p>常艳考入中央编译局博士后工作站之后，想从山西调到北京来，请衣帮忙。衣不仅没有帮她办成此事，还将她一脚踢开，另寻新欢。常艳被迫离开北京后，越想越气。气得不行，于是，下笔12万言，将她与衣的婚外情、性爱史和盘托出。</p>
-<p>2013年1月17日，新华社报道，中央编译局主要负责人衣俊卿因为生活作风问题，不适合继续在现岗位工作，已被免去其中央编译局局长职务。</p>
+<p>2013年1月17日，新华社报导，中央编译局主要负责人衣俊卿因为生活作风问题，不适合继续在现岗位工作，已被免去其中央编译局局长职务。</p>
 <p>衣俊卿成为中共十八大后因“生活作风问题“被免职的第一个省部级高官。</p>
 <p>《中国共产党纪律处分条例》第150条规定：“与他人通奸，造成不良影响的，给予警告或者严重警告处分；情节较重的，给予撤销党内职务或者留党察看处分；情节严重的，给予开除党籍处分。”</p>
-<p>根据衣俊卿17次跟常艳<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BC%80%E6%88%BF.md#1">开房</a>淫乱的情况，根据上述第150条规定，，衣至少应受到党内警告或严重警告处分。但是，衣没有受到任何党纪处分。免职不是党纪处分。</p>
+<p>根据衣俊卿17次跟常艳开房淫乱的情况，根据上述第150条规定，，衣至少应受到党内警告或严重警告处分。但是，衣没有受到任何党纪处分。免职不是党纪处分。</p>
 <p>据说依得到时任中共政治局常委、中央书记处书记刘云山的庇护，不仅保住党籍和公职，还保住自己中共中央直属机构“马列专家”的位置。</p>
 <p>2012年2月11日，常艳记录了衣俊卿的“理想”。因为中央编译局局长是副省部长级高官，他还想更上一层楼，当正省部长级高官。</p>
 <p>他对常艳讲，（中央）哪几个大的部委比较适合他，文化部部长蔡武是他的北大师兄，教育部也适合他，还有中央政策研究室，等等。</p>
 <p>他还说：“下一步，就看（刘）云山进常委的话，就好办些。他比较了解我。”</p>
 <p>他说这话时，刘云山任中共政治局委员、中央宣传部部长。2012年11月中共十八大上，刘云山成为主管意识形态的中共政治局常委、中央书记处书记。如果衣的丑闻不被曝光，中共十八大后，衣很可能得到刘云山的提拔重用。</p>
-<p>衣俊卿的丑闻被曝光后，《钱江晚报》以《满嘴马列满腹盗娼》为题发表评论说：“一个长期从事马克思主义文化哲学研究的副部级高官，用他满腹的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%94%B7%E7%9B%97%E5%A5%B3%E5%A8%BC.md#1">男盗女娼</a>，将他整天挂在嘴上的高尚革命情操，糟蹋得满地乱滚”。</p>
+<p>衣俊卿的丑闻被曝光后，《钱江晚报》以《满嘴马列满腹盗娼》为题发表评论说：“一个长期从事马克思主义文化哲学研究的副部级高官，用他满腹的男盗女娼，将他整天挂在嘴上的高尚革命情操，糟蹋得满地乱滚”。</p>
 <p>新华视点在衣俊卿被免职当天发出一则“新华微评”称，“对于官员来说，自重、慎行要时刻谨记，贪一时之欲只会后悔终生”。</p>
 <p>不过，衣俊卿没有因“贪一时之欲后悔终生”。他被免职后仍担任中央编译局研究员，并在被免职22个月后公开露面，在哈尔滨出席“第九届国外马克思主义论坛”并作主题报告，继续宣讲马克思主义。</p>
 <p>从贾钢涛到衣俊卿，这一众马克思主义专家为什么在贪恋女色上前腐后继？我认为，主要原因有三：</p>
-<h2><strong>第一，中共的老祖宗马、恩、列、斯、毛，个个都是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%BD%E8%89%B2.md#1">好色</a>之徒。</strong></h2>
-<p>马克思与他的妻子燕妮的女佣海伦-德穆特“通奸“，生了一个私生子。</p>
+<h2><strong>第一，中共的老祖宗马、恩、列、斯、毛，个个都是好色之徒。</strong></h2>
+<p>马克思与他的妻子燕妮的女佣海伦-德穆特“通奸”，生了一个私生子。</p>
 <p>恩格斯没有结婚，却有两个同居女友：一个是他家工厂的女工玛丽，一个是玛丽的妹妹莉希。</p>
 <p>列宁死于梅毒。梅毒是一种性病。有研究表明：1917年“十月政变”之前，列宁在欧洲就因乱搞男女关系感染梅毒。</p>
-<p>斯大林不仅<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%BD%E8%89%B2.md#1">好色</a>，而且乱伦。他的第三任妻子、比他小25岁的娜捷塔，就是他与情妇奥莉佳所生的女儿。</p>
+<p>斯大林不仅好色，而且乱伦。他的第三任妻子、比他小25岁的娜捷塔，就是他与情妇奥莉佳所生的女儿。</p>
 <p>毛泽东被他的第二任妻子杨开慧称为“政治流氓、生活流氓”。据李志绥所着《毛泽东私人医生回忆录》讲，毛玩弄女人无数。</p>
 <h2><strong>第二，马克思主张“同传统观念实行最彻底的决裂”。</strong></h2>
 <p>传统观念中最核心的内容就是信神敬神。神传给人的关于两性关系的道德规范的一个重要内容是戒淫乱。</p>
@@ -58,37 +58,34 @@
 <p>马克思主义不死，中国共产党不亡，性乱淫风不止！</p>
 <p>大纪元首发</p>
 <p>责任编辑：高义</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068353.md#1">王友群：江泽民最终将中国的浮水洲岛送给越南</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069964.md#1">王友群：江泽民将中国黑瞎子岛的一半送给俄国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074106.md#1">王友群：中共“武装保卫苏联”的历史丑剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/7/n14090443.md#1">王友群：党领导一切 恒大成巨骗</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/12/13/n9951832.md#1" target="_blank">老绥远韩氏：文革酷刑实录</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/24/n9888434.md#1" target="_blank">杨宁：周恩来初恋女友投河 其子被打成右派</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/12/n14093639.md#1">三国徐庶修炼成仙的记载</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096597.md#1">【未解之谜】预言中的以巴战争</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14096835.md#1">皇帝小故事：旅舍女老板腹中胎儿预言天子到！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14097506.md#1">【古道人生】会算命的道士原来是只大蝎子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099163.md#1">【未解之谜】以色列的第三圣殿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101532.md#1">【热点互动】以色列和伊朗都面临两难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100570.md#1">【环球直击】以色列空袭 哈马斯火箭军副司令亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101374.md#1">【新闻大家谈】碧桂园违约 冲击波惊人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100431.md#1">【菁英论坛】传许家印供出9名正国级官员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14097264.md#1">专家：习近平高调会普京 但不敢真上俄战车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100668.md#1">中国女网红咆哮着支持哈马斯 引发国际关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099847.md#1">传赵丽颖退出、杨幂接演陈可辛新片 引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100799.md#1">遭封杀逾两年 赵薇被爆缺席家公葬礼 引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100135.md#1">组图：第58届电视金钟奖“戏剧类”星光红毯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100816.md#1">传杨颖出售北京5亿豪宅 疑陷舆论风波拟跑路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101141.md#1">汪峰章子怡结束8年婚姻 发声明证实离婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091082.md#1">50岁后的养生哲学 6类食物一定要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100569.md#1">为什么年纪越大越容易感觉冷？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065758.md#1">常被忽视的隐藏版疾病：微笑忧郁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/11/n14092575.md#1">如何预防改善失智症？中医1药茶、3穴位让大脑回春</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/15/n14095745.md#1">吃蔬果别错过槲皮素！抗感染抗病毒不输抗生素</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/23/n14101529.htm">王友群：好色的马克思主义专家前腐后继</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101529.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/10/23/n14101529.htm">王友群：好色的马克思主义专家前腐后继</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/10/23/n14101529.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
